# yapvm

./: CMakeLists.txt  Function.h  Instruction.h  LICENSE  Makefile  Module.h  Opcodes.h  PLANS.md  Parser.cpp  Parser.h  README.md  TODO.md  Utils.cpp  Utils.h  main.cpp  plan_yapvm.xlsx  test.yapvmbc
include/: allocator.h  ast.h  gc.h  interpreter.h  kvstorage.h  kvstorage_element.h  lexer.h  logger.h  parser.h  paths.h  scope.h  thread_manager.h  utils.h  y_iterator.h  y_objects.h
include/parser/: instruction.h
misc/: ast_spec.asdl  plan_yapvm.xlsx
src/: ast.cpp  gc.cpp  interpreter.cpp  lexer.cpp  logger.cpp  main.cpp  parser.cpp  scope.cpp  thread_manager.cpp  utils.cpp  y_iterator.cpp  y_objects.cpp
test/: YObjectTest.cpp  interpreter_test.cpp  kv_storage_test.cpp  lexer_test.cpp  parser_test.cpp  scope_test.cpp  y_object_test.cpp  ygc_test.cpp
test_resources/: arithmetic.py  ast_test_data.txt  dump_ast.py  example_ast.txt  fib.py  gc_work_demo.py  get_py_ast.py  global_ast_test_data.h  inf_rec.py  lexer_test_all.py  list_subscript.py  max_hs.py  mtsum.py  none_eq.py  scalar_prod_threaded.py  simple_function.py  str_mt.py  str_mul.py  test.py  threads_example.py  threads_example_ast.txt  value_based_eq.py  yapvm_cpython_thread_support.py
